Fix mobile menu display and horizontal scrollbar

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -5,10 +5,6 @@ body {
 
 /* pytorch theme overrides */
 
-#header-holder {
-  overflow: hidden;
-}
-
 .ui.tabular.menu .item {
   /* stop breaking tabs */
   width: unset;
@@ -58,6 +54,9 @@ article.pytorch-article pre {
   padding-left: 0;
   padding-right: 20px;
   justify-content: unset;
+  /* avoid horizontal scrollbar */
+  min-width: unset;
+  width: 100%;
 }
 
 .nav__main__logo {
